...
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/rightTurn_imageView"
        app:layout_constraintTop_toTopOf="@+id/feedback_area_info"
        app:srcCompat="@drawable/reverse_off" />

    <ImageView
        android:id="@+id/lights_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
        android:layout_marginLeft="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginStart="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_info"
        android:scaleType="fitCenter"
...
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/lights_imageView"
        app:layout_constraintTop_toTopOf="@+id/feedback_area_info"
        app:srcCompat="@drawable/cruise_control_off" />

    <ImageView
        android:id="@+id/engineStartStop_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
        android:layout_marginLeft="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginStart="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_info"
        android:scaleType="fitCenter"
...
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/suspension_front_imageView"
        app:layout_constraintTop_toTopOf="@+id/setup_area_info"
        app:srcCompat="@drawable/suspension_rear_off" />

    <ImageView
        android:id="@+id/motor_speed_limiter_imageView"
        android:layout_width="@dimen/width_imageViews_setup_area_info"
        android:layout_height="@dimen/height_imageViews_setup_area_info"
        android:layout_marginLeft="@dimen/margin_before_imageViews_setup_area_info"
        android:layout_marginStart="@dimen/margin_before_imageViews_setup_area_info"
        android:layout_marginTop="@dimen/margin_above_imageViews_setup_area_info"
        android:scaleType="fitCenter"
...
